k8s/namespaces/home/glance/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: home
  labels:
    app.kubernetes.io/name: glance
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: glance
  template:
    metadata:
      labels:
        app.kubernetes.io/name: glance
        app.kubernetes.io/managed-by: flux
    spec:
      runtimeClassName: youki
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: glance
          # renovate: datasource=docker depName=docker.io/glanceapp/glance
          image: docker.io/glanceapp/glance:latest@sha256:9dfb09470b207dcb67ac715994bdb1929374ba3f9c0d7df7462c24adf10fd073
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "1"
              memory: "1Gi"
              ephemeral-storage: "5Gi"
          volumeMounts:
            - name: glance-config
              mountPath: /app/config
              readOnly: true
      volumes:
        - name: glance-config
          configMap:
            name: glance-config
            items:
              - key: glance.yml
                path: glance.yml
