k8s/namespaces/home/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: home
  labels:
    app.kubernetes.io/name: glance
spec:
  selector:
    app.kubernetes.io/name: glance
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: glance
  type: ClusterIP
